# haskell-search

./: README.md  haskell-search.cabal  stack.yaml
src/: Main.hs
